--- a/app/views/movements/_form.html.erb
+++ b/app/views/movements/_form.html.erb
@@ -9,12 +9,7 @@
         <% end %>
       </ul>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :author_id, style: "display: block" %>
-    <%= form.text_field :author_id %>
-  </div>
+  <% end %>  
 
   <div>
     <%= form.label :name, style: "display: block" %>
@@ -24,6 +19,11 @@
   <div>
     <%= form.label :amount, style: "display: block" %>
     <%= form.text_field :amount %>
+  </div>
+
+  <div class='field' >
+    <%=form.label :group_id%>
+    <%=form.collection_select :group_id, @groups, :id, :name%>
   </div>
 
   <div>
