--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,35 +1,63 @@
-<%= form_with(model: group) do |form| %>
-  <% if group.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
+<div class='' >
+  <%= form_with(model: group) do |form| %>
+    <% if group.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
 
-      <ul>
-        <% group.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% group.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>  
+
+    
+    <div class="w-100 mb-4" >
+      <%= form.label :Group_name, style: "display: block", class:"text-center h4" %>
+      <%= form.text_field :name, class: "w-100 border border-0 text-center", style: "border-bottom: 100px solid black;", placeholder: "Enter the group name here"  %>
+    </div>
+
+    
+      <%= form.hidden_field :icon, id: "selected_icon"%>
+
+      <%= form.label :Choose_a_icon, style: "display: block", class:"text-center h4 p-0 m-0" %>
+      <div id="icon-picker" class="my-5" >
+      <i class="fas fa-star" data-icon="fa-star"></i>
+      <i class="fas fa-heart" data-icon="fa-heart"></i>
+      <i class="fas fa-check" data-icon="fa-check"></i>
+      <i class="fas fa-envelope" data-icon="fa-envelope"></i>
+      <i class="fas fa-user" data-icon="fa-user"></i>
+      <i class="fas fa-camera" data-icon="fa-camera"></i>
+      <i class="fas fa-globe" data-icon="fa-globe"></i>
+      <i class="fas fa-lock" data-icon="fa-lock"></i>
+      <i class="fas fa-pencil-alt" data-icon="fa-pencil-alt"></i>
+      <i class="fas fa-search" data-icon="fa-search"></i>
+      <i class="fas fa-shopping-cart" data-icon="fa-shopping-cart"></i>
+      <i class="fas fa-phone" data-icon="fa-phone"></i>
+      <i class="fas fa-calendar" data-icon="fa-calendar"></i>
+      <i class="fas fa-home" data-icon="fa-home"></i>
+      <i class="fas fa-briefcase" data-icon="fa-briefcase"></i>
+      <i class="fas fa-star" data-icon="fa-star"></i>
+      <i class="fas fa-heart" data-icon="fa-heart"></i>
+      <i class="fas fa-comment" data-icon="fa-comment"></i>
+      <i class="fas fa-exclamation-triangle" data-icon="fa-exclamation-triangle"></i>
+      <i class="fas fa-check-circle" data-icon="fa-check-circle"></i>
+      <i class="fas fa-times-circle" data-icon="fa-times-circle"></i>
+    </div>
+    
+
+    <div>
+      <%= form.submit class: "w-100 bg-success text-white py-2 fs-4 rounded border border-0" %>
     </div>
   <% end %>
 
-  
-
-  <div>    
-    <% form.hidden_field :user_id, value: current_user.id %>  
-
+  <div class='text-center pt-3 rounded' >
+      <%=button_to "Go Back", groups_path, class: "bg-success text-white fs-4 border border-0", method: :get %>
   </div>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class='check text-center py-5' >
+    <img src="https://placeimg.com" alt="a random img" class='' style="width:150px, height:150px;" >
   </div>
+</div>
 
-  <div>
-    <%= form.label :icon, style: "display: block" %>
-    <%= form.text_field :icon %>
-  </div>
-  
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
