--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,27 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @group %>
+<div class='chec pt-5 mt-5'  >   
 
-<div>
-  <%= link_to "Edit this group", edit_group_path(@group) %> |
-  <%= link_to "Back to groups", groups_path %>
+   <div class='text-center' >      
+      <i class="fas <%=@group.icon%> "  > </i>
+      <h3> <%=@group.name%> Movements </h3>
+      <h3>Total: $ <%=@total_amount%>   </h3>
+   </div>
 
-  <%= button_to "Destroy this group", @group, method: :delete %>
+   <div class='pt-5' >
+      <%@movements.each do |e|%>       
+         <%= render 'movements/movement', movement: e %>
+      <%end%>  
+   </div>
+
+   <% if params[:id].present? %>
+      <div class='pt-5' >
+         <%=link_to "New movement", new_movement_path(id: params[:id]), method: :get, class: "btn w-100 bg-success text-white py-3 h5"%>
+      </div>
+   <% else %>
+      <div class='pt-5' >
+         <%=button_to "New movement", new_movement_path, method: :get, class: "w-100 bg-success text-white py-3 h5"%>
+      </div>
+   <% end %>
+
 </div>
