--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,14 +1,31 @@
-<p style="color: green"><%= notice %></p>
+<div class='position-relative d-flex flex-column justify-content-between chec' >
+  <div>
+    <p style="color: green"><%= notice %></p>
 
-<h1>Groups</h1>
+    <h1 class='text-center mb-4' >Budget-App</h1>
+    <h5 class='text-center' >Groups Information</h5>
 
-<div id="groups">
-  <% @groups.each do |group| %>
-    <%= render group %>
-    <p>
-      <%= link_to "Show this group", group %>
-    </p>
-  <% end %>
+    <% @groups.each do |group| %>    
+
+          <div id="groups" class='d-flex flex-column shadow py-2 px-1 rounded mb-3' >
+            <%= render group %>            
+          </div>
+
+    <% end %>  
+  </div>
+
+  <div style="bottom: 0px; left:0" class="position-fixe chec w-100" >
+    <div class='text-center py-3' >
+      <%= button_to "New Group", new_group_path, class: "w-100 py-3 h3 bg-success text-white", method: 'get' %>
+    </div>
+
+    <div class='text-center py-3' >
+      <%= button_to "New Movement", new_movement_path, method: :get, class: "w-100 py-3 h3 bg-success text-white" %>
+    </div>
+  </div>
+
 </div>
 
-<%= link_to "New group", new_group_path %>
+
+
+
