--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New group</h1>
 
-<%= render "form", group: @group %>
+<%=javascript_include_tag 'chosse_icon'%>
+<div class='container chec' >
+  <h1 class='text-center my-5'  >Add New Group</h1>
+  <%= render "form", group: @group %>
 
-<br>
-
-<div>
-  <%= link_to "Back to groups", groups_path %>
+  
 </div>
+
+
