--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,32 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'>    
-    <link rel='stylesheet' href='https://cdn.simplecss.org/simple.css'>
+    <script src='https://kit.fontawesome.com/7d931a3f92.js' crossorigin='anonymous'></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= render "shared/navbar" %>
-    <%= yield %>
+
+  
+  <body style="d-flexf justify-content-center  bg-success"  >
+
+    
+
+    <div><h1>hola</h1></div>  
+    
+    <div class='position-relative' >
+
+      <%= render "shared/navbar" %>
+
+      <div class='d-flex min-vh-100 justify-content-center m-auto'  >
+        <%= yield %>    
+      </div>
+
+      <%=render "shared/footer" %>    
+      
+    </div>
+
   </body>
 </html>
