--- a/app/views/movements/_form.html.erb
+++ b/app/views/movements/_form.html.erb
@@ -11,22 +11,24 @@
     </div>
   <% end %>  
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class='mb-3' >    
+    <%= form.text_field :name, placeholder: "transaction name", class: "w-100 form-control" %>
   </div>
 
-  <div>
-    <%= form.label :amount, style: "display: block" %>
-    <%= form.text_field :amount %>
+  <div class='mb-3' >    
+    <%= form.text_field :amount, placeholder: "Amount", class: "w-100 form-control"  %>
   </div>
 
-  <div class='field' >
+  <%if params[:id].present? %>    
+    <%= form.hidden_field :group_id, value: params[:id] %>
+  <%else%>
+    <div class='field mb-3 d-flex w-100 gap-4 justify-content-between form-control mb-3' >
     <%=form.label :group_id%>
-    <%=form.collection_select :group_id, @groups, :id, :name%>
+    <%=form.collection_select :group_id, @groups, :id, :name, class: "w-100 flex-grow-1" %>
   </div>
+  <%end%>  
 
-  <div>
-    <%= form.submit %>
+  <div class='mb-3' >
+    <%= form.submit class: "bg-success text-white w-100 h3 py-2 rounded border border-0" %>
   </div>
 <% end %>
