--- a/app/views/movements/_movement.html.erb
+++ b/app/views/movements/_movement.html.erb
@@ -1,17 +1,24 @@
-<div id="<%= dom_id movement %>">
-  <p>
-    <strong>Author:</strong>
-    <%= movement.author_id %>
-  </p>
+<div id="<%= dom_id movement %>", class= "w-100 mb-3 shadow shadow-4 rounded px-1 py-3 chec" >
 
-  <p>
-    <strong>Name:</strong>
-    <%= movement.name %>
-  </p>
 
-  <p>
-    <strong>Amount:</strong>
-    <%= movement.amount %>
-  </p>
+  <div class='d-flex justify-content-between align-items-center pb-3' >
+    <div class='w-50 text-center' >
+      <h6>
+        <%= movement.name %>      
+      </h6>
+      <h5>
+        <%=movement.created_at%>
+      </h5>
+    </div>
+
+    <div class='w-50 text-center' >
+      <h6>
+        <%= movement.amount %>
+      </h6>
+      <%=button_to "delete movement", movement, method: :delete, class: "bg-transparent border-0 "   %>
+    </div>  
+  </div>    
+    
+  
 
 </div>
