before create devise views

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,4 @@
-<div class='position-relative d-flex flex-column justify-content-between chec' >
+<div class='position-relative d-flex flex-column justify-content-between w-10 col-12 col-sm-12 col-md-12 col-lg-9' >
   <div>
     <p style="color: green"><%= notice %></p>
 
@@ -14,7 +14,7 @@
     <% end %>  
   </div>
 
-  <div style="bottom: 0px; left:0" class="position-fixe chec w-100" >
+  <div style="bottom: 0px; left:0" class="position-fixe  w-100" >
     <div class='text-center py-3' >
       <%= button_to "New Group", new_group_path, class: "w-100 py-3 h3 bg-success text-white", method: 'get' %>
     </div>
