--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,18 @@
  #icon-picker i{
   padding: 5px;  
  }
+
+ .side-menu {
+  width: 300px;
+  left: 0;
+  bottom: 0;
+  top: 0;  
+  color: white;
+  z-index: 1000;
+  opacity: 0.5;
+ }
+
+ .side-menu hr {
+  height: 5px;
+  opacity: 1;
+ }
