--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,21 +17,26 @@
   
   <body style="d-flexf justify-content-center  bg-success"  >
 
-    
+    <div class='d-flex' >
+      <span class='position-absolute side-menu bg-success' id="side-menu" >
+        <%=render "shared/sideMenu" %>
+      </span>
+      <div class='flex-grow-1' >
 
-    <div><h1>hola</h1></div>  
-    
-    <div class='position-relative' >
+        <%= render "shared/navbar" %>
 
-      <%= render "shared/navbar" %>
+        <div class='d-flex container min-vh-100 justify-content-center m-auto'  >
+          <%= yield %>    
+        </div>
 
-      <div class='d-flex min-vh-100 justify-content-center m-auto'  >
-        <%= yield %>    
-      </div>
-
-      <%=render "shared/footer" %>    
+        <%=render "shared/footer" %>    
       
+      </div>
     </div>
+
+    
+    
+    
 
   </body>
 </html>
