before adding testing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
 
 
   
-  <body style="d-flexf justify-content-center  bg-success"  >
+  <body style="d-flexf justify-content-center  bg-succes"  >
 
     <div class='d-flex' >
-      <span class='position-absolute side-menu bg-success' id="side-menu" >
+      <span class='position-absolute side-menu bg-primary' id="side-menu" >
         <%=render "shared/sideMenu" %>
       </span>
       <div class='flex-grow-1' >
@@ -35,10 +35,6 @@
       
       </div>
     </div>
-
-    
-    
-    
 
   </body>
   <%= javascript_include_tag "side_menu"  %>
