--- a/app/views/shared/_sideMenu.html.erb
+++ b/app/views/shared/_sideMenu.html.erb
@@ -1,14 +1,17 @@
 
 
-<div class='' >
+<div class='bg-primary' >
   <div class='d-flex justify-content-end p-3' >    
     <i class='fas fa-close fs-1' id="close-side-menu" ></i>
   </div>
 
   <div class='d-flex flex-column align-items-start gap-3 mt-5 px-4 ' >
 
-    <div class='d-flex flex-column align-items-center p-4 mb-4 justify-self-center'  >      
+    <div class='d-flex flex-column align-items-center p-4 mb-4 justify-self-center'  >    
       <i class='fas fa-user' ></i>  
+      <% if current_user %>
+        <h6> <%=current_user.name%> </h6>  
+      <%end%>
     </div>
 
     <div class='d-flex align-items-center gap-4' >
