--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -56,8 +56,8 @@
       <%=button_to "Go Back", groups_path, class: "bg-success text-white fs-4 border border-0", method: :get %>
   </div>
 
-  <div class='check text-center py-5' >
-    <img src="https://placeimg.com" alt="a random img" class='' style="width:150px, height:150px;" >
+  <div class='text-center py-5' >
+    <img src="https://www.ecured.cu/images/5/5b/Finanzas_05.jpg" alt="a random img" class='' style="width:100px, height:100px;" >
   </div>
 </div>
 
