--- a/app/views/movements/new.html.erb
+++ b/app/views/movements/new.html.erb
@@ -17,7 +17,7 @@
 
 
     <div  class='mb-3' >
-      <%= button_to "Back to movements", movements_path, class: "btn btn-success fs-5" %>
+      <%= button_to "Back to movements", :back, class: "btn btn-success fs-5", method: :get %>      
     </div>
 
   </div>
