--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
   <div class='text-center' >
 
-  <h1 class='pt-5' >Super Wallet</h1>
+  <h1 class='pt-5 nice_font' >Super Wallet</h1>
 
   <h4 class='pt-5' >Control your financial management with intellegence spending insights</h4>
 
