--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,72 +13,68 @@
  *= require_tree .
  *= require_self
  */
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Roboto+Slab:wght@300;400;500;600;700&display=swap');
 
- 
- @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Roboto+Slab:wght@300;400;500;600;700&display=swap');
-
-
-
- .check,
- .check * {
+.check,
+.check * {
   border: 1px solid black;
- }
+}
 
- .fas {
+.fas {
   font-size: 80px;
- }
+}
 
- .selected {
+.selected {
   background-color: red;
- }
+}
 
- #icon-picker {
+#icon-picker {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   max-height: 200px;
   overflow-y: scroll;
- }
+}
 
- #icon-picker i{
-  padding: 5px;  
- }
+#icon-picker i {
+  padding: 5px;
+}
 
- .side-menu {
+.side-menu {
   width: 300px;
   left: 0;
   bottom: 0;
-  top: 0;  
+  top: 0;
   height: 100vh;
   color: white;
-  z-index: 1000;  
+  z-index: 1000;
   display: none;
   position: fixed;
- }
+}
 
- .side-menu hr {
+.side-menu hr {
   height: 5px;
   opacity: 1;
- }
+}
 
- #open-side-menu {
+#open-side-menu {
   cursor: pointer;
- }
+}
 
- #close-side-menu {
+#close-side-menu {
   cursor: pointer;
- }
+}
 
- .bg-success {
-  background-color: #28a745 !important;  
-  border: none
- }
+.bg-success {
+  background-color: #28a745 !important;
+  border: none;
+}
 
- .bg-primary {
-  background-color: #007bff !important;  
- }
+.bg-primary {
+  background-color: #007bff !important;
+}
 
- .nice_font {
+.nice_font {
   font-family: 'Caveat', cursive;
   font-size: 4rem;
- }
+}
