--- a/app/views/movements/_movement.html.erb
+++ b/app/views/movements/_movement.html.erb
@@ -1,17 +1,21 @@
-<div id="<%= dom_id movement %>", class= "w-100 mb-3 shadow shadow-4 rounded px-1 py-3 chec" >
+<div id="<%= dom_id movement %>", class= "w-100 mb-3 shadow shadow-4 rounded px-3 py-3 chec" >
 
 
   <div class='d-flex justify-content-between align-items-center pb-3' >
-    <div class='w-50 text-center' >
+    <div class='d-flex align-items-center' >
+      <i class="fas <%=movement.group.icon%> fs-1" data-icon="fa-check" style="width:100px, height: 100px; transform: scale(1.9); color:blue" ></i>  
+    </div>    
+
+    <div class=' text-center' >
       <h6>
         <%= movement.name %>      
       </h6>
-      <h5>
-        <%=movement.created_at%>
-      </h5>
+      <h6>
+        <%=movement.created_at.strftime("%d %b de %Y")  %>
+      </h6>
     </div>
 
-    <div class='w-50 text-center' >
+    <div class=' text-center' >
       <h6>
         <%= movement.amount %>
       </h6>
