--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<div class='chec pt-5 mt-5'  >   
+<div class='chec pt-5 mt-5 w-100'  >   
 
    <div class='text-center' >            
       <h3> <%=@group.name%> Movements </h3>
