--- a/app/views/movements/_movement.html.erb
+++ b/app/views/movements/_movement.html.erb
@@ -1,9 +1,9 @@
-<div id="<%= dom_id movement %>", class= "w-100 mb-3 shadow shadow-4 rounded px-3 py-3 chec" >
+<div id="<%= dom_id movement %>", class= "w-100 mb-3 shadow shadow-4 rounded px-3 py-3" >
 
 
-  <div class='d-flex justify-content-between align-items-center pb-3' >
+  <div class='d-flex justify-content-around align-items-center pb-3 align-items-center' >
     <div class='d-flex align-items-center' >
-      <i class="fas <%=movement.group.icon%> fs-1" data-icon="fa-check" style="width:100px, height: 100px; transform: scale(1.9); color:blue" ></i>  
+      <i class="fas <%=movement.group.icon%> fs-1" data-icon="fa-check" style="width:200px, height: 100px; transform: scale(1.8); color:blue" ></i>  
     </div>    
 
     <div class=' text-center' >
@@ -15,8 +15,8 @@
       </h6>
     </div>
 
-    <div class=' text-center' >
-      <h6>
+    <div class=' text-center' style="width: 100px" >
+      <h6 class='m-0 p-0' >
         <%= movement.amount %>
       </h6>
       <%=button_to "delete movement", movement, method: :delete, class: "bg-transparent border-0 "   %>
