--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  */
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Roboto+Slab:wght@300;400;500;600;700&display=swap');
 
+
 .check,
 .check * {
   border: 1px solid black;
@@ -77,4 +78,8 @@
 .nice_font {
   font-family: 'Caveat', cursive;
   font-size: 4rem;
+}
+
+body {
+  font-family: 'Proxima nova', sans-serif;
 }
