--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,12 +40,14 @@
   padding: 5px;
 }
 
-.side-menu {
+#side-menu {
   width: 300px;
   left: 0;
   bottom: 0;
   top: 0;
-  height: 100vh;
+  height: 100%;
+  /* max-height: 100%; */
+  /* overflow: scroll; */
   color: white;
   z-index: 1000;
   display: none;
@@ -81,4 +83,7 @@
 
 body {
   font-family: 'Proxima nova', sans-serif;
+  background-color: blue;
 }
+
+
