--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -12,9 +12,9 @@
       <%=link_to group_path(group), class: "text-decoration-none" do  %>
 
       <div class='w-100 d-fle' >
-        <h4 class='' >
+        <h6 class='' >
           <%= group.name %>     
-        </h4>
+        </h6>
         <h6>
           <%= group.created_at.strftime("%d %b de %Y") %>   
         </h6>                
@@ -26,7 +26,7 @@
           Total: <%= group.movements.sum(:amount) %>
         </h6>              
 
-        <%= button_to "Delete Group", group, method: :delete, class: "bg-transparent border border-0 p-0", style: "z-index: 999" %>
+        <%= button_to "Delete", group, method: :delete, class: "bg-transparent border border-0 p-0", style: "z-index: 999" %>
         
       </div>
     </div>  
