--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,26 +1,23 @@
-<p style="color: green"><%= notice %></p>
-
-<div class='chec pt-5 mt-5 w-100'  >   
-
-   <div class='text-center' >            
-      <h3> <%=@group.name%> Movements </h3>
-      <h3>Total: $ <%=@total_amount%>   </h3>
+<div class='text-center' >
+      <p style="color: green">  <%= notice %></p>   
    </div>
 
-   <div class='pt-5' >
+<div class='t-5 h-100 w-100 d-flex flex-column justify-content-between bg-light'  >      
+
+   <div class='text-center container d-flex justify-content-between align-items-center px-4 py-3 mt-3 bg-white shadow-1' >            
+      <h6> <%=@group.name%>: movements </h6>
+      <h6>Total: $ <%=@total_amount%>   </h6>
+   </div>
+
+   <div class='pt-5  mt-3 overflow-scroll' >
       <%@movements.each do |e|%>       
          <%= render 'movements/movement', movement: e %>
       <%end%>  
    </div>
 
-   <% if params[:id].present? %>
-      <div class='pt-5' >
-         <%=link_to "New movement", new_movement_path(id: params[:id]), method: :get, class: "btn w-100 bg-success text-white py-3 h5"%>
+      <div class='' >
+         <%=link_to "New movements", new_group_movement_path(group_id: params[:id]), method: :get, class: "btn w-100 bg-success text-white py-4 "%>
       </div>
-   <% else %>
-      <div class='pt-5' >
-         <%=button_to "New movement", new_movement_path, method: :get, class: "w-100 bg-success text-white py-3 h5"%>
-      </div>
-   <% end %>
+   
 
 </div>
