--- a/app/views/shared/_sideMenu.html.erb
+++ b/app/views/shared/_sideMenu.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class='bg-primary' >
+<div class='bg-primar' >
   <div class='d-flex justify-content-end p-3' >    
     <i class='fas fa-close fs-1' id="close-side-menu" ></i>
   </div>
@@ -26,12 +26,7 @@
       <%=link_to "New Group", new_group_path, class: "text-white text-decoration-none" %>      
     </div>
     <hr class='w-100 m-0 p-0 mb-3'  >
-
-    <div class='d-flex align-items-center gap-4' >
-      <i class='fas fa-pencil-alt fs-4' ></i>
-      <%=link_to "New movement", new_movement_path, class: "text-white text-decoration-none" %>      
-    </div>
-    <hr class='w-100 m-0 p-0 mb-3'  >
+    
 
     <div class='d-flex align-items-center gap-4' >
       <i class='fas fa-home fs-4' ></i>
@@ -42,7 +37,7 @@
     
     <div class='d-flex align-items-center gap-4' >
       <i class='fas fa-sign-out-alt fs-4' ></i>      
-      <%=button_to "Salir", destroy_user_session_path,method: :delete, class: " bg-transparent border border-0  text-white" %>      
+      <%=button_to "Exit", destroy_user_session_path,method: :delete, class: " bg-transparent border border-0  text-white" %>      
     </div>
     <hr class='w-100 m-0 p-0 mb-3'  >    
       
