--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -16,7 +16,7 @@
    </div>
 
       <div class='' >
-         <%=link_to "New movements", new_group_movement_path(group_id: params[:id]), method: :get, class: "btn w-100 bg-success text-white py-4 "%>
+         <%=link_to "New movement", new_group_movement_path(group_id: params[:id]), method: :get, class: "btn w-100 bg-success text-white py-4 "%>
       </div>
    
 
