--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,15 @@
 }
 
 .fas {
-  font-size: 80px;
+  font-size: 50px;
+  color: rgb(120, 120, 206);
 }
 
 .selected {
-  background-color: red;
+  /* background-color: rgb(29, 3, 3); */
+  transform: scale(1.3);
+  color: black;
+  border-radius: 50%;
 }
 
 #icon-picker {
