Update changes requiered by reviewer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'>   
-    <link rel="stylesheet" type="text/css" href="../../app/assets/stylesheets/fonts/fonts.css"> 
+    <%# <link rel="stylesheet" type="text/css" href="../../app/assets/stylesheets/fonts/fonts.css">  %>
     <script src='https://kit.fontawesome.com/7d931a3f92.js' crossorigin='anonymous'></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
