--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,7 +88,7 @@
 }
 
 body {
-  font-family: 'Proxima nova', sans-serif;
+  /* font-family: 'Proxima nova', sans-serif; */
   background-color: blue;
 }
 
