--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -2,7 +2,7 @@
 <div id="<%= dom_id group %>" class='d-flex justify-content-between align-items-center' >
   
   <%=link_to group_path(group) do%>      
-    <i class="fas <%=group.icon%> " data-icon="fa-check" style="width:100px; height: 100px; transform: scale(0.8)" ></i>
+    <i class="fas <%=group.icon%> fs-1" data-icon="fa-check" style="width:100px; height: 100px; transform: scale(0.8); font-size: 30px" ></i>
   <%end%>
   
 
