--- a/app/views/shared/_sideMenu.html.erb
+++ b/app/views/shared/_sideMenu.html.erb
@@ -5,10 +5,10 @@
     <i class='fas fa-close fs-1' id="close-side-menu" ></i>
   </div>
 
-  <div class='d-flex flex-column align-items-start gap-3 mt-5 px-4 ' >
+  <div class='d-flex flex-column align-items-start gap-3 mt-5 px-4 text-white' >
 
     <div class='d-flex flex-column align-items-center p-4 mb-4 justify-self-center'  >    
-      <i class='fas fa-user' ></i>  
+      <i class='fas fa-user fs-2' ></i>  
       <% if current_user %>
         <h6> <%=current_user.name%> </h6>  
       <%end%>
